--- a/styling.html
+++ b/styling.html
@@ -33,6 +33,7 @@ Description : Learning CSS.
 
     .block-demo > .inline-demo:first-child {            
         float: left;
+        color: red;
     }
 
     .block-demo > .inline-demo:nth-child(2) {            
