--- a/form.html
+++ b/form.html
@@ -2,8 +2,8 @@
 =========================================================
 Name        : form.html
 Assignment  : Lab 3 Exercise C
-Author(s)   : Himel Paul, S M Wahid Chowdhury
-Submission  : Jan 31, 2024
+Author(s)   : Mahdi Ansari,  William Arthur Philip Louis
+Submission  : May 21, 2030
 Description : A simple HTML file for form tag.
 =========================================================
 -->
